--- a/Day-27/flutter_shop/pubspec.yaml
+++ b/Day-27/flutter_shop/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   dio: ^2.0.14
   flutter_swiper : ^1.1.4
+  flutter_screenutil: ^0.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
