--- a/Day-27/flutter_shop/pubspec.yaml
+++ b/Day-27/flutter_shop/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   dio: ^2.0.14
   flutter_swiper : ^1.1.4
   flutter_screenutil: ^0.5.0
+  url_launcher: ^5.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
