--- a/Day-28/flutter_shop/pubspec.yaml
+++ b/Day-28/flutter_shop/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   dio: ^2.0.22
+  flutter_swiper : ^1.1.5
 
 dev_dependencies:
   flutter_test:
