--- a/Day-28/flutter_shop/pubspec.yaml
+++ b/Day-28/flutter_shop/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   dio: ^2.0.22
   flutter_swiper : ^1.1.5
+  flutter_screenutil: ^0.5.1
 
 dev_dependencies:
   flutter_test:
