--- a/Day-29/flutter_shuqi-master/pubspec.yaml
+++ b/Day-29/flutter_shuqi-master/pubspec.yaml
@@ -19,11 +19,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  dio: ^1.0.13
-  carousel_slider: ^1.0.1
-  cached_network_image: ^0.5.1
+  dio: ^2.1.0
+  carousel_slider: ^1.1.0
+  cached_network_image: ^0.7.0
+  flutter_webview_plugin: ^0.3.0+2
+
   shared_preferences: ^0.4.3
-  flutter_webview_plugin: ^0.3.0
   share: ^0.5.3
   fluttertoast: ^2.2.6
   battery: ^0.2.3
